initial cmmt
